# cpp-b2ddff

./: .gitignore  CMakeLists.txt  CURRICULUM.md  README.md  check-stage-01.sh  check-stage-03.sh
example/: CMakeLists.txt  README.md
example/include/iterables/: exercises.hpp
example/tests/: iterables_tests.cpp
src/stages/stage-01-core-language/01-std-string/02-count-words/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/01-std-string/03-split-on-spaces/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/01-std-string/04-join-strings/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/01-std-string/05-trim-whitespace/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/01-std-string/06-replace-all/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/01-std-string/07-palindrome/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/01-std-string/08-reverse-words/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/02-std-vector/: CMakeLists.txt
src/stages/stage-01-core-language/02-std-vector/01-sum-elements/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/02-std-vector/02-running-totals/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/02-std-vector/03-filter-values/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/02-std-vector/04-remove-duplicates/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/02-std-vector/05-rotate-left-right/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/02-std-vector/06-reverse/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/02-std-vector/07-binary-search/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/02-std-vector/08-merge-sorted-vectors/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/02-std-vector/09-sliding-window-average/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/03-std-optional/: CMakeLists.txt
src/stages/stage-01-core-language/03-std-optional/01-safe-divide/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/03-std-optional/02-parse-integer/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/03-std-optional/03-find-first-occurrence/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/03-std-optional/04-find-maximum/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/03-std-optional/05-lookup-in-map/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/03-std-optional/06-get-element/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/03-std-optional/07-find-first-even/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/03-std-optional/08-parse-double/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/03-std-optional/09-average-values/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/03-std-optional/10-find-key-by-value/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/04-references-and-const/: CMakeLists.txt
src/stages/stage-01-core-language/04-references-and-const/01-total-length/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/04-references-and-const/02-longest-string/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/04-references-and-const/03-append-suffix/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/04-references-and-const/04-increment-all/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/04-references-and-const/05-clamp-in-place/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/04-references-and-const/06-swap-values/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/04-references-and-const/07-copy-if-greater/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/04-references-and-const/08-scale-values/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/04-references-and-const/09-contains-word/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-01-core-language/04-references-and-const/10-update-if-found/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-03-classes/01-create-classes/: CMakeLists.txt
src/stages/stage-03-classes/01-create-classes/01-fraction/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-03-classes/01-create-classes/02-complex-number/: CMakeLists.txt  exercise.cpp  exercise.hpp  exercise_tests.cpp
src/stages/stage-03-classes/01-create-classes/03-date/: CMakeLists.txt  (+3 more)
src/stages/stage-03-classes/02-practice/: CMakeLists.txt
stage-01/: CMakeLists.txt  CURRICULUM-only-for-agents-to-read.md  README.md
stage-01/capstone/: README.md
stage-01/include/stage01/: exercises.hpp
stage-01/src/: exercises.cpp
stage-01/tests/: stage01_tests.cpp
(+135 files in other folders)
