add_subdirectory(01-sum-elements)
add_subdirectory(02-running-totals)
add_subdirectory(03-filter-values)
add_subdirectory(04-remove-duplicates)
add_subdirectory(05-rotate-left-right)
add_subdirectory(06-reverse)
add_subdirectory(07-binary-search)
add_subdirectory(08-merge-sorted-vectors)
add_subdirectory(09-sliding-window-average)
