add_subdirectory(01-safe-divide)
add_subdirectory(02-parse-integer)
add_subdirectory(03-find-first-occurrence)
add_subdirectory(04-find-maximum)
add_subdirectory(05-lookup-in-map)
add_subdirectory(06-get-element)
add_subdirectory(07-find-first-even)
add_subdirectory(08-parse-double)
add_subdirectory(09-average-values)
add_subdirectory(10-find-key-by-value)
