add_subdirectory(01-total-length)
add_subdirectory(02-longest-string)
add_subdirectory(03-append-suffix)
add_subdirectory(04-increment-all)
add_subdirectory(05-clamp-in-place)
add_subdirectory(06-swap-values)
add_subdirectory(07-copy-if-greater)
add_subdirectory(08-scale-values)
add_subdirectory(09-contains-word)
add_subdirectory(10-update-if-found)
