add_library(stage_01_std_vector_01_sum_elements exercise.cpp)
target_include_directories(stage_01_std_vector_01_sum_elements PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_vector_01_sum_elements_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_vector_01_sum_elements_tests PRIVATE stage_01_std_vector_01_sum_elements)
add_test(NAME stage_01_std_vector_01_sum_elements COMMAND stage_01_std_vector_01_sum_elements_tests)
