add_library(stage_01_std_vector_02_running_totals exercise.cpp)
target_include_directories(stage_01_std_vector_02_running_totals PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_vector_02_running_totals_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_vector_02_running_totals_tests PRIVATE stage_01_std_vector_02_running_totals)
add_test(NAME stage_01_std_vector_02_running_totals COMMAND stage_01_std_vector_02_running_totals_tests)
