add_library(stage_01_std_vector_03_filter_values exercise.cpp)
target_include_directories(stage_01_std_vector_03_filter_values PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_vector_03_filter_values_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_vector_03_filter_values_tests PRIVATE stage_01_std_vector_03_filter_values)
add_test(NAME stage_01_std_vector_03_filter_values COMMAND stage_01_std_vector_03_filter_values_tests)
