add_library(stage_01_std_vector_04_remove_duplicates exercise.cpp)
target_include_directories(stage_01_std_vector_04_remove_duplicates PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_vector_04_remove_duplicates_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_vector_04_remove_duplicates_tests PRIVATE stage_01_std_vector_04_remove_duplicates)
add_test(NAME stage_01_std_vector_04_remove_duplicates COMMAND stage_01_std_vector_04_remove_duplicates_tests)
