add_library(stage_01_std_vector_05_rotate_left_right exercise.cpp)
target_include_directories(stage_01_std_vector_05_rotate_left_right PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_vector_05_rotate_left_right_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_vector_05_rotate_left_right_tests PRIVATE stage_01_std_vector_05_rotate_left_right)
add_test(NAME stage_01_std_vector_05_rotate_left_right COMMAND stage_01_std_vector_05_rotate_left_right_tests)
