add_library(stage_01_std_vector_07_binary_search exercise.cpp)
target_include_directories(stage_01_std_vector_07_binary_search PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_vector_07_binary_search_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_vector_07_binary_search_tests PRIVATE stage_01_std_vector_07_binary_search)
add_test(NAME stage_01_std_vector_07_binary_search COMMAND stage_01_std_vector_07_binary_search_tests)
