add_library(stage_01_std_vector_08_merge_sorted_vectors exercise.cpp)
target_include_directories(stage_01_std_vector_08_merge_sorted_vectors PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_vector_08_merge_sorted_vectors_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_vector_08_merge_sorted_vectors_tests PRIVATE stage_01_std_vector_08_merge_sorted_vectors)
add_test(NAME stage_01_std_vector_08_merge_sorted_vectors COMMAND stage_01_std_vector_08_merge_sorted_vectors_tests)
