add_library(stage_01_std_vector_09_sliding_window_average exercise.cpp)
target_include_directories(stage_01_std_vector_09_sliding_window_average PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_vector_09_sliding_window_average_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_vector_09_sliding_window_average_tests PRIVATE stage_01_std_vector_09_sliding_window_average)
add_test(NAME stage_01_std_vector_09_sliding_window_average COMMAND stage_01_std_vector_09_sliding_window_average_tests)
