add_library(stage_01_std_optional_01_safe_divide exercise.cpp)
target_include_directories(stage_01_std_optional_01_safe_divide PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_optional_01_safe_divide_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_optional_01_safe_divide_tests PRIVATE stage_01_std_optional_01_safe_divide)
add_test(NAME stage_01_std_optional_01_safe_divide COMMAND stage_01_std_optional_01_safe_divide_tests)
