add_library(stage_01_std_optional_02_parse_integer exercise.cpp)
target_include_directories(stage_01_std_optional_02_parse_integer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_optional_02_parse_integer_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_optional_02_parse_integer_tests PRIVATE stage_01_std_optional_02_parse_integer)
add_test(NAME stage_01_std_optional_02_parse_integer COMMAND stage_01_std_optional_02_parse_integer_tests)
