add_library(stage_01_std_optional_03_find_first_occurrence exercise.cpp)
target_include_directories(stage_01_std_optional_03_find_first_occurrence PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_optional_03_find_first_occurrence_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_optional_03_find_first_occurrence_tests PRIVATE stage_01_std_optional_03_find_first_occurrence)
add_test(NAME stage_01_std_optional_03_find_first_occurrence COMMAND stage_01_std_optional_03_find_first_occurrence_tests)
