add_library(stage_01_std_optional_04_find_maximum exercise.cpp)
target_include_directories(stage_01_std_optional_04_find_maximum PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_optional_04_find_maximum_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_optional_04_find_maximum_tests PRIVATE stage_01_std_optional_04_find_maximum)
add_test(NAME stage_01_std_optional_04_find_maximum COMMAND stage_01_std_optional_04_find_maximum_tests)
