add_library(stage_01_std_optional_05_lookup_in_map exercise.cpp)
target_include_directories(stage_01_std_optional_05_lookup_in_map PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_optional_05_lookup_in_map_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_optional_05_lookup_in_map_tests PRIVATE stage_01_std_optional_05_lookup_in_map)
add_test(NAME stage_01_std_optional_05_lookup_in_map COMMAND stage_01_std_optional_05_lookup_in_map_tests)
