add_library(stage_01_std_optional_06_get_element exercise.cpp)
target_include_directories(stage_01_std_optional_06_get_element PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(stage_01_std_optional_06_get_element_tests exercise_tests.cpp)
target_link_libraries(stage_01_std_optional_06_get_element_tests PRIVATE stage_01_std_optional_06_get_element)
add_test(NAME stage_01_std_optional_06_get_element COMMAND stage_01_std_optional_06_get_element_tests)
